# music-genre-classifier

./: .env.example  .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
models/: resnet50_1hour_best.pth
scripts/: split_checkpoint.py
src/: audio.py  checkpoint.py  config.py  inference.py  model.py
tools/: download_wandb_model.py  push_to_hf_space.py
