[project]
name = "music-genre-classifier"
version = "0.1.0"
description = "Simple music genre classifier"
requires-python = ">=3.10,<3.11"
dependencies = [
  "gradio==4.44.1",
  "huggingface_hub==0.25.2",
  "fastapi==0.112.2",
  "starlette==0.38.6",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "torchvision>=0.17.0",
  "soundfile>=0.12.1",
  "librosa>=0.10.0"
]

[tool.uv]
package = false
